--- a/src/components/SearchInput/SearchInput.module.css
+++ b/src/components/SearchInput/SearchInput.module.css
@@ -26,7 +26,6 @@
     width: 100%;
     gap: 20px;
     margin-top: 50px;
-    padding-bottom: 50px;
 }
 
 .status {
@@ -79,7 +78,6 @@
     .container {
         gap: 28px;
         margin-top: 60px;
-        padding-bottom: 60px;
     }
     .status {
         letter-spacing: 0.32px;
@@ -104,8 +102,6 @@
     }
     .container {
         gap: 40px;
-        margin-top: 100px;
-        padding-bottom: 100px;
     }
     .status {
         font-size: 18px;
